2009-03-03  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h:
	Added hd_render_manager_blurred_changed convenience function
	* src/home/hd-home-view.c:
	Now call update_blur when the background image changes
	* src/tidy/tidy-blur-group.c:
	Added fallback for when pixel shader can't be used - like scratchbox
        (uses multiple renders)
	* src/mb/hd-comp-mgr.c:
	Added comment to explain commenting of blur update code

2009-03-03  Gordon Williams <gordon.williams@collabora.co.uk>

	Clutter 0.8.2-0maemo20 reccomended (or transitions stutter)
	* src/home/hd-render-manager.c:
	  Removed blur box for task navigator, instead just adjust opacity.	  
	  Fixed restacking bug
	  Fixed bug causing transitions to be constantly running in some cases
	* src/tidy/tidy-blur-group.c:
	  Re-engineered blur to do a progressive blur for blurring in, and
	  a simple fade for blurring out.
	* src/mb/hd-comp-mgr.c:
	  Removed the unmap_effect variable as it turns out not to be needed
	  No longer return windows for stacking as we do it in HDRM now
	  (this allows us to only update the screen when absolutely required)
	* data/transitions.ini
	* src/util/hd-transition.c:
	  Added 'duration' settings for more types of transition. Removed
	  settings for task navigator blur box

2009-03-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c (backgrounds_dir_changed): Change
	suffix to .pvr.

2009-03-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/tidy/tidy-blur-group.c (tidy_blur_group_paint):
	  Fallback to something sensible if we don't have FBO.

2009-03-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* tests/Makefile.am:
	  Build test-portrait-dlg from the right source.
	* tests/test-portrait-win.c:
	  Header cleanup.

2009-03-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c:
	  Optimised blur pixel shader a little, and added more samples